Improve UI: no longer include one CSS file per Gist -> only one to rule them all, support tag links in description, no more collapsing for now

--- a/app/assets/stylesheets/playbyexample/search.less
+++ b/app/assets/stylesheets/playbyexample/search.less
@@ -12,6 +12,9 @@
        padding-left: 100%;
        border-top: 1px solid #ddd;
        border-right: 1px solid #ddd;
+     }
+
+     [data-toggle=collapse] {
        cursor: pointer;
      }
    }
